--- a/src/app.api.common/build.gradle
+++ b/src/app.api.common/build.gradle
@@ -1,5 +1,8 @@
 dependencies {
-    compile "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
-
-    testCompile "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
+  implementation("org.springframework.boot:spring-boot-starter-web:${springBootVersion}") {
+    // exclude group: 'org.apache.tomcat.embed', module: 'tomcat-embed-core'
+  }
+  compile "javax.servlet:javax.servlet-api:4.0.1"
+  testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
 }
+
