--- a/src/app.api.demo/build.gradle
+++ b/src/app.api.demo/build.gradle
@@ -4,9 +4,13 @@ apply plugin: 'org.springframework.boot'
 mainClassName = "${baseModuleName}.demo.DemoApplication"
 
 dependencies {
-    compile "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
-    implementation "io.springfox:springfox-swagger2:${swaggerVersion}"
-    implementation "io.springfox:springfox-swagger-ui:${swaggerVersion}"
+  compile "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
+  compile "org.springframework.boot:spring-boot-starter-webflux:${springBootVersion}"
+  runtime "org.springframework.boot:spring-boot-devtools:${springBootVersion}"
+  implementation "io.reactivex.rxjava2:rxjava:2.2.8"
+  implementation "io.springfox:springfox-swagger2:${swaggerVersion}"
+  implementation "io.springfox:springfox-swagger-ui:${swaggerVersion}"
 
-    testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
+  testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
+  testImplementation "org.hamcrest:hamcrest-all:1.3"
 }
