--- a/src/app.api.demo/main/resources/application-ssl.yml
+++ b/src/app.api.demo/main/resources/application-ssl.yml
@@ -1,9 +1,10 @@
 spring:
   application:
-    name: API OAuth2 Authorization Server
+    name: API Demo Server
+    env: Local
 
 server:
-  port: 8444
+  port: 8451
   ssl:
     enabled: true
     key-alias: app
@@ -13,6 +14,4 @@ server:
 
 security:
   require-ssl: true
-  oauth2:
-    jwt:
-      signing-key: 12345
+
