--- a/src/app.api.gateway/build.gradle
+++ b/src/app.api.gateway/build.gradle
@@ -3,20 +3,23 @@ apply plugin: 'org.springframework.boot'
 
 mainClassName = "${baseModuleName}.gateway.GatewayApplication"
 
+/*
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-netflix:${springCloudVersion}"
     }
 }
+*/
 
 dependencies {
     implementation project(":${baseModuleName}.common")
     implementation project(":${baseModuleName}.autoconfigure")
 
-    implementation "org.springframework.cloud:spring-cloud-starter-parent:Finchley.RELEASE"
     implementation "org.springframework.cloud:spring-cloud-starter-netflix-zuul:${springCloudVersion}"
     implementation "org.springframework.cloud:spring-cloud-starter-oauth2:${springCloudVersion}"
-    implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
+    // implementation "org.springframework.security:spring-security-oauth2-client:${springVersion}"
+    //implementation "org.springframework.security:spring-security-oauth2-jose:${springVersion}"
+
     implementation "io.springfox:springfox-swagger2:${swaggerVersion}"
     implementation "io.springfox:springfox-swagger-ui:${swaggerVersion}"
 
